<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_group"
        android:layout_below="@+id/logo_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/call_to_action"
        android:textColor="@color/colorPrimaryDark3"
        android:textSize="16sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="#374451"
        android:textSize="12sp"
        android:text="@string/text_bottom" />

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sign_in_button"
            android:text="@string/sign_in"
            android:textColor="@color/colorWitheText"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/register_button"
            android:textColor="@color/colorWitheText"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:text="@string/register"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</RelativeLayout>