<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/old_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlackText"
        android:textSize="20sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlackText"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary2"
        android:text="@string/forgot_password" />

</LinearLayout>