<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:background="#EDEDED"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/calendar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@id/constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/calendar_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/clear_list_image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/clear_bg"
            android:contentDescription="@string/list_clear" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimaryDark3"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/clear_list_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark3"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/empty_events_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#cdcdcd"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/add_event_image_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_add_circle_blue"
            android:contentDescription="@string/new_event" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary2"
        android:src="@drawable/ic_action_calendar"
        android:textColor="@color/colorWitheText"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>

