<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/avatar"
        android:background="@drawable/bg_avatar"
        android:padding="5dp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image_button"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_name"
            android:layout_weight="1"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:contentDescription="@string/name" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/colorWitheText"
            android:textColorHint="@color/colorPrimary2"
            android:autofillHints="@string/name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_email"
            android:layout_weight="1"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:contentDescription="@string/email" />

        <EditText
            android:id="@+id/email_field"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWitheText"
            android:textColorHint="@color/colorPrimary2"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginStart="10dp"
            android:autofillHints="@string/email" />

    </LinearLayout>

    <Button
        android:id="@+id/birth_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_2_text"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorWitheText"
        android:text="@string/birthday" />

</RelativeLayout>